--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         }
     }
 </script>
-<script type="application/json" src="./javascript/projects.JSON"></script>
+<script type="application/json" src="./javascript/projects.json"></script>
 <script type="text/javascript" src="./javascript/index.js"></script>
 
 </html>
