--- a/index.html
+++ b/index.html
@@ -298,8 +298,8 @@
         }
     }
 </script>
-<script type="application/json" src="./javascript/projects.json"></script>
-<script type="text/javascript" src="./javascript/index.js"></script>
+<script type="application/json" src="https://anton-bendryk-dev.github.io/kodInfo/javascript/projects.json"></script>
+<script type="text/javascript" src="https://anton-bendryk-dev.github.io/kodInfo/javascript/index.js"></script>
 
 </html>
 
